# habib-os

./: .env.example  .gitignore  CLAUDE.md  deploy.sh  ecosystem.config.js  pyproject.toml  requirements.txt  sp-api-technical-report.md
scripts/: check_active_listings.py  get_refresh_token.py  sync_all.py  test_db_integration.py  test_spapi.py  test_spapi_full.py
src/agents/: base.py  finance_agent.py  hooks.py  marketing_agent.py  memory.py  ops_agent.py
src/agents/skills/: competitor_snapshot.md  daily_briefing.md  inventory_check.md  ppc_watchdog.md  weekly_finance.md
src/config/: db_helpers.py  settings.py  supabase_client.py
src/jobs/: competitor_sync.py  expire_approvals.py  fees_sync.py  inventory_sync.py  listings_sync.py  orders_sync.py  ppc_sync.py  pricing_sync.py  reviews_sync.py  scheduler.py
src/spapi/: advertising.py  auth.py  catalog.py  client.py  fees.py  inventory.py  listings.py  orders.py  pricing.py
src/telegram/: approval.py  bot.py  notifications.py
src/utils/: audit.py  logging.py
tests/: conftest.py  test_layer1_config.py  test_layer2_spapi.py  test_layer3_jobs.py
