[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "habib-os"
version = "0.1.0"
description = "Habib Distribution OS — Autonomous Amazon FBA Operating System"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring live credentials (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
